[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Environment/Barricades/Barricade_01.png" type="Texture" id=1]
[ext_resource path="res://Game_Objects/Barricade.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 132, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 32 )

[node name="Barricade" type="StaticBody2D" groups=["barricade"]]
collision_layer = 32
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Node2D" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.054902, 0.607843, 0.941176, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
modulate = Color( 1, 0.742188, 0.802612, 1 )
collision_layer = 32
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0, 0.819608, 0.647059, 1 )
shape = SubResource( 2 )

[node name="InsideAreaTrigger" type="Area2D" parent="."]
position = Vector2( 0, -64 )
collision_layer = 32
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InsideAreaTrigger"]
modulate = Color( 0.92549, 0.52549, 0.0627451, 1 )
shape = SubResource( 2 )

[connection signal="get_hit" from="." to="." method="_on_Barricade_get_hit"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="InsideAreaTrigger" to="." method="_on_InsideAreaTrigger_body_entered"]
